2007-01-25  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/main.ccg: Destructor: Call the cleanup functions, instead of calling 
	init again. This seems to be a copy/paste error from April 2003. 
	Bug #383340 from Christopher Raine.

2.6.15:

2006-11-23  Johannes Schmid <johannes.schmid@openismus.com>

	* gtk/src/uimanager.ccg:
	Fixed a crasher in error handling when exceptions are disabled

2006-11-14  Murray Cumming  <murrayc@murrayc.com>

        * configure.in:
        * gtk/gtkmmconfig.h.in:
        * scripts/reduced.m4: Added --enable-api-maemo-extensions
        configure option, default to false, defining the
        GTKMM_MAEMO_EXTENSIONS_ENABLED macro.
        * gtk/src/textbuffer.hg:
        * gtk/src/textbuffer.ccg: Put the Maemo-specific API in
        ifdefs, using the optional _WRAP_METHOD() parameter.

2006-11-14  Daniel Elstner  <daniel.kitta@gmail.com>

	* autogen.sh: Wholly replace this script with a critter from one
	of my personal projects, with slight modifications.  This one does
	some sophisticated stuff like probing version numbers of available
	automake and aclocal executables, in order to choose the right one
	accordingly.  All this is necessary to make the build system work
	robustly in custom environments such as Maemo where automake-1.9
	doesn't come preinstalled.
	While we're at it, kill some old cruft such as the check for GNU
	make.  This test was kind of pointless as the $MAKE variable was
	never exported.  Also get rid of the --enable-warnings=hardcore
	magic; this just doesn't belong here and could cause unnecessary
	trouble to non-developers.

2006-10-05  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/settings.hg: Remove extra ; to avoid a warning, to fix the 
	build.

2006-08-02  Armin Burgmeier  <armin@arbur.net>

	* gtk/src/fontbutton.hg: Renamed constructor argument to font_name
	for gmmproc to produce the correct property name.

2.6.14:

2006-08-01  Murray Cumming  <murrayc@murrayc.com>
