@@ -1,3 +1,9 @@
+2007-03-09  Jonathon Jongsma  <jjongsma@gnome.org>
+
+	* gtk/src/gtk_docs_override.xml: fix documentation of
+	IconTheme::get_example_icon_name() so that it doesn't imply that the
+	returned ustring needs to be freed.
+
 2007-01-25  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/main.ccg: Destructor: Call the cleanup functions, instead of calling 
